alterando links do navegador

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
             <a href="paginas/produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="home.html" class="atual">Vídeo de Apresentação</a>
+            <a href="#" class="atual">Vídeo de Apresentação</a>
             <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
             <a href="paginas/diferenciais.html">Diferenciais</a>
             <a href="paginas/processos.html">Processo de Montagem</a>
