--- a/paginas/fale.html
+++ b/paginas/fale.html
@@ -21,7 +21,7 @@
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
-                <a href="fale.html" class="atual">Fale Conosco</a>
+                <a href="#" class="atual">Fale Conosco</a>
             </div>
         </nav>
         <nav class="navbar" id="navproduto">
