--- a/paginas/parceiros.html
+++ b/paginas/parceiros.html
@@ -42,7 +42,7 @@
             <a href="solucoes.html">Soluções de Montagem</a>
         </nav>
         <nav class="navbar" id="navparceiros">
-            <a href="parceiros.html" class="atual">Pedidos de Patente</a>
+            <a href="#" class="atual">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
             <a href="videomvp.html">Vídeo de MVP</a>
