--- a/paginas/pitchdeck.html
+++ b/paginas/pitchdeck.html
@@ -43,7 +43,7 @@
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
-            <a href="pitchdeck.html" class="atual">Pitch Deck</a>
+            <a href="#" class="atual">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
             <a href="videomvp.html">Vídeo de MVP</a>
             <a href="trl.html">TRL</a>
