--- a/paginas/produto_page2.html
+++ b/paginas/produto_page2.html
@@ -26,7 +26,7 @@
         </nav>
         <nav class="navbar" id="navproduto">
             <a href="produto_page1.html">Blocos</a>
-            <a href="produto_page2.html" class="atual">Esquadrilhas</a>
+            <a href="#" class="atual">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
