--- a/paginas/produto_page3.html
+++ b/paginas/produto_page3.html
@@ -27,7 +27,7 @@
         <nav class="navbar" id="navproduto">
             <a href="produto_page1.html">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
-            <a href="produto_page3.html" class="atual">Caixas</a>
+            <a href="#" class="atual">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
             <a href="produto_page6.html">Equipamentos</a>
