--- a/paginas/produto_page6.html
+++ b/paginas/produto_page6.html
@@ -30,7 +30,7 @@
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
-            <a href="produto_page6.html" class="atual">Equipamentos</a>
+            <a href="#" class="atual">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
             <a href="../home.html">Vídeo de Apresentação</a>
