--- a/paginas/trl.html
+++ b/paginas/trl.html
@@ -46,7 +46,7 @@
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
             <a href="videomvp.html">Vídeo de MVP</a>
-            <a href="trl.html" class="atual">TRL</a>
+            <a href="#" class="atual">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
     </header>
