--- a/paginas/onepager.html
+++ b/paginas/onepager.html
@@ -44,7 +44,7 @@
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
-            <a href="onepager.html" class="atual">One Pager</a>
+            <a href="#" class="atual">One Pager</a>
             <a href="videomvp.html">Vídeo de MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
