--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -36,7 +36,7 @@
             <a href="../home.html">Vídeo de Apresentação</a>
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
-            <a href="processos.html" class="atual">Processo de Montagem</a>
+            <a href="#" class="atual">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
             <a href="solucoes.html">Soluções de Montagem</a>
