--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -34,7 +34,7 @@
         </nav>
         <nav class="navbar" id="navhome">
             <a href="../home.html">Vídeo de Apresentação</a>
-            <a href="sistema.html" class="atual">MEGG wOrmhOle System</a>
+            <a href="#" class="atual">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
