--- a/paginas/solucaoproblemas.html
+++ b/paginas/solucaoproblemas.html
@@ -37,7 +37,7 @@
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
-            <a href="solucaoproblemas.html" class="atual">Solução dos Problemas</a>
+            <a href="#" class="atual">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
             <a href="solucoes.html">Soluções de Montagem</a>
         </nav>
