--- a/paginas/valoracao.html
+++ b/paginas/valoracao.html
@@ -47,7 +47,7 @@
             <a href="onepager.html">One Pager</a>
             <a href="videomvp.html">Vídeo de MVP</a>
             <a href="trl.html">TRL</a>
-            <a href="valoracao.html" class="atual">Valoração</a>
+            <a href="#" class="atual">Valoração</a>
         </nav>
     </header>
     <header class="header0">
