--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -70,51 +70,78 @@
             navparceiros.style.display='none'
         }
         function navA1(){
-            if(navhome.style.display=='none'){
-                navhome.style.display='flex'
-                navproduto.style.display='none'
-                navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                if(navhome.style.display=='none'){
+                    navhome.style.display='flex'
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                }
+                else{
+                    navhome.style.display='none'
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                }
             }
             else{
-                navhome.style.display='none'
+                itens.style.display='none'
+                navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
             }
         }
         function navA2(){
-            if(navproduto.style.display=='none'){
+            if(window.innerWidth>=769){
+                if(navproduto.style.display=='none'){
+                    navproduto.style.display='flex'
+                    navhome.style.display='none'
+                    navparceiros.style.display='none'
+                }
+                else{
+                    navhome.style.display='none'
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                }
+            }
+            else{
+                itens.style.display='none'
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
             }
-            else{
-                navhome.style.display='none'
-                navproduto.style.display='none'
-                navparceiros.style.display='none'
-            }
         }
         function navA3(){
-            if(navparceiros.style.display=='none'){
+            if(window.innerWidth>=769){
+                if(navparceiros.style.display=='none'){
+                    navparceiros.style.display='flex'
+                    navhome.style.display='none'
+                    navproduto.style.display='none'
+                }
+                else{
+                    navhome.style.display='none'
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                }
+            }
+            else{
+                itens.style.display='none'
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
             }
-            else{
+        }
+        
+        function clickMenu(){
+            if(itens.style.display=='block'){
+                itens.style.display='none'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
             }
-        }
-        function clickMenu(){
-            if(itens.style.display=='block'){
-                itens.style.display='none'
-                burger.style.backgroundColor='white'
-                burger.style.color='darkred'
-            }
             else{
                 itens.style.display='block'
-                burger.style.backgroundColor='darkred'
-                burger.style.color='white'
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
             }
         }
         function mudouTamanho(){
@@ -124,14 +151,6 @@
             else{
                 itens.style.display='none'
             }
-        }
-        function change(){
-            burger.style.color='white'
-            burger.style.background='darkred'
-        }
-        function changeback(){
-            burger.style.color='darkred'
-            burger.style.background='white'
         }
     </script>
 </body>
