--- a/paginas/solucaoproblemas.html
+++ b/paginas/solucaoproblemas.html
@@ -77,52 +77,78 @@
             navparceiros.style.display='none'
         }
         function navA1(){
-            if(navhome.style.display=='none'){
-                navhome.style.display='flex'
-                navproduto.style.display='none'
-                navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                if(navhome.style.display=='none'){
+                    navhome.style.display='flex'
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                }
+                else{
+                    navhome.style.display='none'
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                }
             }
             else{
-                navhome.style.display='none'
+                itens.style.display='none'
+                navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
             }
         }
         function navA2(){
-            if(navproduto.style.display=='none'){
+            if(window.innerWidth>=769){
+                if(navproduto.style.display=='none'){
+                    navproduto.style.display='flex'
+                    navhome.style.display='none'
+                    navparceiros.style.display='none'
+                }
+                else{
+                    navhome.style.display='none'
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                }
+            }
+            else{
+                itens.style.display='none'
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
             }
-            else{
-                navhome.style.display='none'
-                navproduto.style.display='none'
-                navparceiros.style.display='none'
-            }
         }
         function navA3(){
-            if(navparceiros.style.display=='none'){
+            if(window.innerWidth>=769){
+                if(navparceiros.style.display=='none'){
+                    navparceiros.style.display='flex'
+                    navhome.style.display='none'
+                    navproduto.style.display='none'
+                }
+                else{
+                    navhome.style.display='none'
+                    navproduto.style.display='none'
+                    navparceiros.style.display='none'
+                }
+            }
+            else{
+                itens.style.display='none'
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
-            }
-            else{
-                navhome.style.display='none'
-                navproduto.style.display='none'
-                navparceiros.style.display='none'
             }
         }
         
         function clickMenu(){
             if(itens.style.display=='block'){
                 itens.style.display='none'
-                burger.style.backgroundColor='white'
-                burger.style.color='darkred'
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
             }
             else{
                 itens.style.display='block'
-                burger.style.backgroundColor='darkred'
-                burger.style.color='white'
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
             }
         }
         function mudouTamanho(){
@@ -132,57 +158,6 @@
             else{
                 itens.style.display='none'
             }
-        }
-
-
-        function clickArq001(){
-            if(arq001frame.style.display=='block'){
-                arq001frame.style.display='none'
-            }
-            else{
-                arq001frame.style.display='block'
-            }
-        }
-        function clickArq002(){
-            if(arq002frame.style.display=='block'){
-                arq002frame.style.display='none'
-            }
-            else{
-                arq002frame.style.display='block'
-            }
-        }
-        function clickArq003(){
-            if(arq003frame.style.display=='block'){
-                arq003frame.style.display='none'
-            }
-            else{
-                arq003frame.style.display='block'
-            }
-        }
-        function clickArq004(){
-            if(arq004frame.style.display=='block'){
-                arq004frame.style.display='none'
-            }
-            else{
-                arq004frame.style.display='block'
-            }
-        }
-        function clickArq005(){
-            if(arq005frame.style.display=='block'){
-                arq005frame.style.display='none'
-            }
-            else{
-                arq005frame.style.display='block'
-            }
-        }
-        
-        function change(){
-            burger.style.color='white'
-            burger.style.background='darkred'
-        }
-        function changeback(){
-            burger.style.color='darkred'
-            burger.style.background='white'
         }
     </script>
 </body>
