removendo comandos antigos

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
