adicionando ao javascript

--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -167,9 +167,15 @@
         function mudouTamanho(){
             if(window.innerWidth>=769){
                 itens.style.display='flex'
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
             }
             else{
                 itens.style.display='none'
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
             }
         }
     </script>
