ajuste de javascript

--- a/paginas/fale.html
+++ b/paginas/fale.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -86,6 +86,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -106,6 +107,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -126,6 +128,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -135,12 +138,15 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
+
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
