--- a/paginas/produto_page3.html
+++ b/paginas/produto_page3.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -111,9 +111,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                navproduto.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -124,7 +124,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -133,6 +133,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -144,7 +145,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -153,6 +154,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -164,7 +166,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -173,6 +175,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -182,12 +185,15 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
+
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
