--- a/paginas/produto_page5.html
+++ b/paginas/produto_page5.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -61,9 +61,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                navproduto.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -74,7 +74,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -83,6 +83,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -94,7 +95,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -103,6 +104,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -114,7 +116,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -123,6 +125,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -132,12 +135,15 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
+
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
