--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
@@ -69,9 +69,9 @@
 
         <script>
             function navarrumado(){
-                navhome.style.display='none'
-                navproduto.style.display='none'
-                navparceiros.style.display='none'
+                if(window.innerWidth>=769){
+                        navhome.style.display='flex'
+                }
             }
             function navA1(){
                 if(window.innerWidth>=769){
@@ -81,7 +81,7 @@
                         navparceiros.style.display='none'
                     }
                     else{
-                        navhome.style.display='none'
+                        navhome.style.display='flex'
                         navproduto.style.display='none'
                         navparceiros.style.display='none'
                     }
@@ -91,6 +91,7 @@
                     navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
+                    burger.innerText='< Home'
                 }
             }
             function navA2(){
@@ -101,7 +102,7 @@
                         navparceiros.style.display='none'
                     }
                     else{
-                        navhome.style.display='none'
+                        navhome.style.display='flex'
                         navproduto.style.display='none'
                         navparceiros.style.display='none'
                     }
@@ -111,6 +112,7 @@
                     navproduto.style.display='flex'
                     navhome.style.display='none'
                     navparceiros.style.display='none'
+                    burger.innerText='< Produtos'
                 }
             }
             function navA3(){
@@ -121,7 +123,7 @@
                         navproduto.style.display='none'
                     }
                     else{
-                        navhome.style.display='none'
+                        navhome.style.display='flex'
                         navproduto.style.display='none'
                         navparceiros.style.display='none'
                     }
@@ -131,6 +133,7 @@
                     navparceiros.style.display='flex'
                     navhome.style.display='none'
                     navproduto.style.display='none'
+                    burger.innerText='< Documentos'
                 }
             }
             
@@ -140,12 +143,14 @@
                     navhome.style.display='none'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
+                    burger.innerText='Menu'
                 }
                 else{
                     itens.style.display='block'
                     navhome.style.display='none'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
+                    burger.innerText='Menu'
                 }
             }
             function mudouTamanho(){
