--- a/paginas/parceiros.html
+++ b/paginas/parceiros.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -76,9 +76,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                navparceiros.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -90,7 +90,7 @@
                 else{
                     navhome.style.display='none'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navparceiros.style.display='flex'
                 }
             }
             else{
@@ -98,6 +98,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -110,7 +111,7 @@
                 else{
                     navhome.style.display='none'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navparceiros.style.display='flex'
                 }
             }
             else{
@@ -118,6 +119,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -130,7 +132,7 @@
                 else{
                     navhome.style.display='none'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navparceiros.style.display='flex'
                 }
             }
             else{
@@ -138,6 +140,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -147,12 +150,15 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
+
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
