--- a/paginas/pitchdeck.html
+++ b/paginas/pitchdeck.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -63,9 +63,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                navparceiros.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -77,7 +77,7 @@
                 else{
                     navhome.style.display='none'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navparceiros.style.display='flex'
                 }
             }
             else{
@@ -85,6 +85,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -97,7 +98,7 @@
                 else{
                     navhome.style.display='none'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navparceiros.style.display='flex'
                 }
             }
             else{
@@ -105,6 +106,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -117,7 +119,7 @@
                 else{
                     navhome.style.display='none'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navparceiros.style.display='flex'
                 }
             }
             else{
@@ -125,6 +127,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -134,12 +137,15 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
+
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
