--- a/paginas/produto_page1.html
+++ b/paginas/produto_page1.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -456,9 +456,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                navproduto.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -469,7 +469,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -478,6 +478,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -489,7 +490,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -498,6 +499,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -509,7 +511,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -518,6 +520,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -527,12 +530,15 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
+
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
