--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -85,9 +85,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                navproduto.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -98,7 +98,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -107,6 +107,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -118,7 +119,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -127,6 +128,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -138,7 +140,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -147,6 +149,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -156,12 +159,15 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
+
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
