--- a/paginas/produto_page6.html
+++ b/paginas/produto_page6.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -62,9 +62,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                navproduto.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -75,7 +75,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -84,6 +84,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -95,7 +96,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -104,6 +105,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -115,7 +117,7 @@
                 }
                 else{
                     navhome.style.display='none'
-                    navproduto.style.display='none'
+                    navproduto.style.display='flex'
                     navparceiros.style.display='none'
                 }
             }
@@ -124,6 +126,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -133,12 +136,15 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
+
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
