--- a/paginas/solucoes.html
+++ b/paginas/solucoes.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -150,9 +150,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                    navhome.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -162,7 +162,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -172,6 +172,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -182,7 +183,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -192,6 +193,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -202,7 +204,7 @@
                     navproduto.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -212,6 +214,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -221,12 +224,14 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
