--- a/paginas/valor.html
+++ b/paginas/valor.html
@@ -12,7 +12,7 @@
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
-            <span id="burger" onclick="clickMenu()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()">Menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -70,9 +70,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                    navhome.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -82,7 +82,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -92,6 +92,7 @@
                 navhome.style.display='flex'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Home'
             }
         }
         function navA2(){
@@ -102,7 +103,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -112,6 +113,7 @@
                 navproduto.style.display='flex'
                 navhome.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='< Produtos'
             }
         }
         function navA3(){
@@ -122,7 +124,7 @@
                     navproduto.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -132,6 +134,7 @@
                 navparceiros.style.display='flex'
                 navhome.style.display='none'
                 navproduto.style.display='none'
+                burger.innerText='< Documentos'
             }
         }
         
@@ -141,12 +144,14 @@
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
             else{
                 itens.style.display='block'
                 navhome.style.display='none'
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
+                burger.innerText='Menu'
             }
         }
         function mudouTamanho(){
