Atualização de CSS e javascript

--- a/paginas/diferenciais.html
+++ b/paginas/diferenciais.html
@@ -83,7 +83,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -104,7 +104,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -125,7 +125,7 @@
                     navproduto.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -146,7 +146,6 @@
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
                 burger.innerText='Menu'
-
             }
             else{
                 itens.style.display='block'
