--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -80,7 +80,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -101,7 +101,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -122,7 +122,7 @@
                     navproduto.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -143,7 +143,6 @@
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
                 burger.innerText='Menu'
-
             }
             else{
                 itens.style.display='block'
