atualização de css

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="paginas/estilo/print.css" media="print">
     <style>
         body,html{
-            background-image: linear-gradient(to top, gray, transparent);
+            background-image: linear-gradient(to top, darkred, transparent);
             height: 100%;
         }
     </style>
