--- a/paginas/diferenciais.html
+++ b/paginas/diferenciais.html
@@ -19,7 +19,7 @@
             <div>
                 <p onclick="navA1()" class="atual">Home &#9776;</p>
                 <p onclick="navA2()">Produtos &#9776;</p>
-                <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
+                <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
@@ -33,7 +33,7 @@
             <a href="produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="../home.html">Vídeo</a>
+            <a href="../home.html">Vídeo de Apresentação</a>
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="#" class="atual">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
