--- a/paginas/videomvp.html
+++ b/paginas/videomvp.html
@@ -56,14 +56,14 @@
     
  
     <main>
-        <h1>Video de MVP</h1>
+        <h1>Vídeo de MVP</h1>
     </main>
 
 
     <script>
         function navarrumado(){
             if(window.innerWidth>=769){
-                    navhome.style.display='flex'
+                navparceiros.style.display='flex'
             }
         }
         function navA1(){
@@ -74,9 +74,9 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='flex'
+                    navparceiros.style.display='flex'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navhome.style.display='none'
                 }
             }
             else{
@@ -95,9 +95,9 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='flex'
+                    navparceiros.style.display='flex'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navhome.style.display='none'
                 }
             }
             else{
@@ -116,9 +116,9 @@
                     navproduto.style.display='none'
                 }
                 else{
-                    navhome.style.display='flex'
+                    navparceiros.style.display='flex'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navhome.style.display='none'
                 }
             }
             else{
