--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -56,6 +56,7 @@
     
 
     <main>
+        <h1>Sobre Nós</h1>
         <p>A wOrmhOle é uma construtech brasileira que está estruturada para atuar em todas as regiões do país através do sistema de franquia e/ou licenciamento. Inicialmente a empresa é composta por 2 sócios, 1 engenheiro mecânico e 1 engenheiro de computação do 4º ano.</p>
         <p>Soluções simples, rápidas, práticas e patenteável, sem nenhuma concorrência.</p>
         <p>Industrializando a construção de alvenaria, fazendo da montagem obra um lego.</p>
@@ -65,9 +66,9 @@
 
     <script>
         function navarrumado(){
-            navhome.style.display='none'
-            navproduto.style.display='none'
-            navparceiros.style.display='none'
+            if(window.innerWidth>=769){
+                    navhome.style.display='flex'
+            }
         }
         function navA1(){
             if(window.innerWidth>=769){
@@ -77,7 +78,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -98,7 +99,7 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -119,7 +120,7 @@
                     navproduto.style.display='none'
                 }
                 else{
-                    navhome.style.display='none'
+                    navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
                 }
@@ -140,7 +141,6 @@
                 navproduto.style.display='none'
                 navparceiros.style.display='none'
                 burger.innerText='Menu'
-
             }
             else{
                 itens.style.display='block'
