--- a/paginas/valoracao.html
+++ b/paginas/valoracao.html
@@ -64,7 +64,7 @@
     <script>
         function navarrumado(){
             if(window.innerWidth>=769){
-                    navhome.style.display='flex'
+                navparceiros.style.display='flex'
             }
         }
         function navA1(){
@@ -75,9 +75,9 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='flex'
+                    navparceiros.style.display='flex'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navhome.style.display='none'
                 }
             }
             else{
@@ -96,9 +96,9 @@
                     navparceiros.style.display='none'
                 }
                 else{
-                    navhome.style.display='flex'
+                    navparceiros.style.display='flex'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navhome.style.display='none'
                 }
             }
             else{
@@ -117,9 +117,9 @@
                     navproduto.style.display='none'
                 }
                 else{
-                    navhome.style.display='flex'
+                    navparceiros.style.display='flex'
                     navproduto.style.display='none'
-                    navparceiros.style.display='none'
+                    navhome.style.display='none'
                 }
             }
             else{
