--- a/paginas/solucaoproblemas.html
+++ b/paginas/solucaoproblemas.html
@@ -17,9 +17,9 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()" class="atual">Home &#9776;</p>
-                <p onclick="navA2()">Produtos &#9776;</p>
-                <p onclick="navA3()">Docs para Investidores &#9776;</p>
+                <p onclick="navA1()" id="navA" class="atual">Home &#9776;</p>
+                <p onclick="navA2()" id="navB">Produtos &#9776;</p>
+                <p onclick="navA3()" id="navC">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
@@ -75,54 +75,75 @@
             navproduto.style.display='none'
             navparceiros.style.display='none'
         }
-        function navA1(){
-            if(window.innerWidth>=769){
-                if(navhome.style.display=='none'){
+            function navA1(){
+                if(window.innerWidth>=769){
+                    if(navhome.style.display=='none'){
+                        navhome.style.display='flex'
+                        navproduto.style.display='none'
+                        navparceiros.style.display='none'
+
+                        navA.style.background='red'
+                        navA.style.color='white'
+                        navB.style.background='white'
+                        navB.style.color='darkred'
+                        navC.style.background='white'
+                        navC.style.color='darkred'
+                    }
+                }
+                else{
+                    itens.style.display='none'
                     navhome.style.display='flex'
                     navproduto.style.display='none'
                     navparceiros.style.display='none'
+                    burger.innerText='< Home'
                 }
             }
-            else{
-                itens.style.display='none'
-                navhome.style.display='flex'
-                navproduto.style.display='none'
-                navparceiros.style.display='none'
-                burger.innerText='< Home'
-            }
-        }
-        function navA2(){
-            if(window.innerWidth>=769){
-                if(navproduto.style.display=='none'){
+            function navA2(){
+                if(window.innerWidth>=769){
+                    if(navproduto.style.display=='none'){
+                        navproduto.style.display='flex'
+                        navhome.style.display='none'
+                        navparceiros.style.display='none'
+
+                        navA.style.background='white'
+                        navA.style.color='darkred'
+                        navB.style.background='red'
+                        navB.style.color='white'
+                        navC.style.background='white'
+                        navC.style.color='darkred'
+                    }
+                }
+                else{
+                    itens.style.display='none'
                     navproduto.style.display='flex'
                     navhome.style.display='none'
                     navparceiros.style.display='none'
+                    burger.innerText='< Produtos'
                 }
             }
-            else{
-                itens.style.display='none'
-                navproduto.style.display='flex'
-                navhome.style.display='none'
-                navparceiros.style.display='none'
-                burger.innerText='< Produtos'
-            }
-        }
-        function navA3(){
-            if(window.innerWidth>=769){
-                if(navparceiros.style.display=='none'){
+            function navA3(){
+                if(window.innerWidth>=769){
+                    if(navparceiros.style.display=='none'){
+                        navparceiros.style.display='flex'
+                        navhome.style.display='none'
+                        navproduto.style.display='none'
+
+                        navA.style.background='white'
+                        navA.style.color='darkred'
+                        navB.style.background='white'
+                        navB.style.color='darkred'
+                        navC.style.background='red'
+                        navC.style.color='white'
+                    }
+                }
+                else{
+                    itens.style.display='none'
                     navparceiros.style.display='flex'
                     navhome.style.display='none'
                     navproduto.style.display='none'
+                    burger.innerText='< Documentos'
                 }
             }
-            else{
-                itens.style.display='none'
-                navparceiros.style.display='flex'
-                navhome.style.display='none'
-                navproduto.style.display='none'
-                burger.innerText='< Documentos'
-            }
-        }
         
         function clickMenu(){
             if(itens.style.display=='block'){
