--- a/paginas/produto_page2.html
+++ b/paginas/produto_page2.html
@@ -121,10 +121,10 @@
 
                         navA.style.background='red'
                         navA.style.color='white'
-                        navB.style.background='white'
-                        navB.style.color='darkred'
-                        navC.style.background='white'
-                        navC.style.color='darkred'
+                        navB.style.background=''
+                        navB.style.color=''
+                        navC.style.background=''
+                        navC.style.color=''
                     }
                 }
                 else{
@@ -142,12 +142,12 @@
                         navhome.style.display='none'
                         navparceiros.style.display='none'
 
-                        navA.style.background='white'
-                        navA.style.color='darkred'
+                        navA.style.background=''
+                        navA.style.color=''
                         navB.style.background='red'
                         navB.style.color='white'
-                        navC.style.background='white'
-                        navC.style.color='darkred'
+                        navC.style.background=''
+                        navC.style.color=''
                     }
                 }
                 else{
@@ -165,10 +165,10 @@
                         navhome.style.display='none'
                         navproduto.style.display='none'
 
-                        navA.style.background='white'
-                        navA.style.color='darkred'
-                        navB.style.background='white'
-                        navB.style.color='darkred'
+                        navA.style.background=''
+                        navA.style.color=''
+                        navB.style.background=''
+                        navB.style.color=''
                         navC.style.background='red'
                         navC.style.color='white'
                     }
