--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -17,7 +17,7 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()" id="navA" class="atual">Home &#9776;</p>
+                <p onclick="navA1()" id="navA">Home &#9776;</p>
                 <p onclick="navA2()" id="navB">Produtos &#9776;</p>
                 <p onclick="navA3()" id="navC">Docs para Investidores &#9776;</p>
                 <a href="#" class="atual">Sobre Nós</a>
@@ -68,6 +68,8 @@
         function navarrumado(){
             navproduto.style.display='none'
             navparceiros.style.display='none'
+            navA.style.background='red'
+            navA.style.color='white'
         }
             function navA1(){
                 if(window.innerWidth>=769){
@@ -78,10 +80,10 @@
 
                         navA.style.background='red'
                         navA.style.color='white'
-                        navB.style.background='white'
-                        navB.style.color='darkred'
-                        navC.style.background='white'
-                        navC.style.color='darkred'
+                        navB.style.background=''
+                        navB.style.color=''
+                        navC.style.background=''
+                        navC.style.color=''
                     }
                 }
                 else{
@@ -99,12 +101,12 @@
                         navhome.style.display='none'
                         navparceiros.style.display='none'
 
-                        navA.style.background='white'
-                        navA.style.color='darkred'
+                        navA.style.background=''
+                        navA.style.color=''
                         navB.style.background='red'
                         navB.style.color='white'
-                        navC.style.background='white'
-                        navC.style.color='darkred'
+                        navC.style.background=''
+                        navC.style.color=''
                     }
                 }
                 else{
@@ -122,10 +124,10 @@
                         navhome.style.display='none'
                         navproduto.style.display='none'
 
-                        navA.style.background='white'
-                        navA.style.color='darkred'
-                        navB.style.background='white'
-                        navB.style.color='darkred'
+                        navA.style.background=''
+                        navA.style.color=''
+                        navB.style.background=''
+                        navB.style.color=''
                         navC.style.background='red'
                         navC.style.color='white'
                     }
